code refactor basics done